--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Denk+One&display=swap" rel="stylesheet">
 </head>
 <body>
-  <main class="island">
+  <main class="island-1-2">
     <h1>Prehistoric mammals</h1>
     <ol class="grid grid-stretch">
-      <li class="unit xs-1 s-1 m-1-2 l-1-2 unit-content-distribute card island-1-2 push-2">
+      <li class="unit xs-1 s-1 m-1-2 l-1-2 unit-content-distribute card island-1-2 push-1-2">
         <div class="unit-content-distribute content-fill">
           <img class="img-flex" src="images/arsinoitherium.jpg" alt="">
           <h2>Arsinoitherium</h2>
@@ -20,7 +21,7 @@
           <a href="https://en.wikipedia.org/wiki/Arsinoitherium">Learn more about Arsinoitherium</a>
         </div>
       </li>
-      <li class="unit xs-1 s-1 m-1-2 l-1-2 unit-content-distribute card island-1-2 push-2">
+      <li class="unit xs-1 s-1 m-1-2 l-1-2 unit-content-distribute card island-1-2 push-1-2">
         <div class="unit-content-distribute content-fill">
           <img class="img-flex" src="images/elasmotherium.jpg" alt="">
           <h2>Elasmotherium</h2>
@@ -28,7 +29,7 @@
           <a href="https://en.wikipedia.org/wiki/Elasmotherium">Learn more about Elasmotherium</a>
         </div>
       </li>
-      <li class="unit xs-1 s-1 m-1-2 l-1-2 unit-content-distribute card island-1-2 push-2">
+      <li class="unit xs-1 s-1 m-1-2 l-1-2 unit-content-distribute card island-1-2 push-1-2">
         <div class="unit-content-distribute content-fill">
           <img class="img-flex" src="images/glyptodon.jpg" alt="">
           <h2>Glyptodon</h2>
@@ -36,7 +37,7 @@
           <a href="https://en.wikipedia.org/wiki/Glyptodon">Learn more about Glyptodon</a>
         </div>
       </li>
-      <li class="unit xs-1 s-1 m-1-2 l-1-2 unit-content-distribute card island-1-2 push-2">
+      <li class="unit xs-1 s-1 m-1-2 l-1-2 unit-content-distribute card island-1-2 push-1-2">
         <div class="unit-content-distribute content-fill">
           <img class="img-flex" src="images/megatherium.jpg" alt="">
           <h2>Glyptodon</h2>
